testsuite/tests/parser/should_fail/T19504.hs
module T19504 where

error_notLocated = (\ (0,  ) -> (0, undefined))
